k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: production
spec:
  selector:
    app: cloud-deploy
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
